# hopsfs-native-object-store

./: Cargo.toml  HOPS_VERSION  README.md  build.rs
.cargo/: config.toml
lib/: libhdfs-golang-3.2.0.16-EE-RC0-darwin-10.12-arm64.h  libhdfs.h
src/: client.rs  lib.rs  native.rs
tests/: test_hopsfs_object_store.rs  test_object_store.rs
