[package]
name = "hdfs-native-object-store"
version = "1.0.1"
edition = "2021"
authors = ["Adam Binford <adamq43@gmail.com>"]
homepage = "https://github.com/datafusion-contrib/hdfs-native-object-store"
repository = "https://github.com/datafusion-contrib/hdfs-native-object-store"
keywords = ["hadoop", "hdfs", "object_store"]
description = "object_store implementation for Native HDFS client"
readme = "README.md"
license = "Apache-2.0"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
flate2 = "1.0"
tar = "0.4"
fs_extra = "1.3.0"
url = "2.5.4"
log = "0.4"
env_logger = "0.11.7"

[dependencies]
async-trait = "0.1"
bytes = "1"
chrono = "0.4"
futures = "0.3"
object_store = ">= 0.10, < 0.12"
thiserror = "2"
tokio = { version = "1", features = ["rt", "net", "io-util", "macros", "sync", "time"] }
libc = "0.1.10"
async-stream = "0.3.6"

[dev-dependencies]
env_logger = "0.11"
serial_test = "3"

[features]
default = ["skip-download"]
integration-test = []
skip-download = []