[package]
name = "hdfs-native-object-store"
version = "1.1.0"
edition = "2024"
authors = ["Adam Binford <adamq43@gmail.com>", "Hamid Ghasemirahni <hamid@hopsworks.ai>", "Salman Niazi<salman@hopsworks.ai>"]
homepage = "https://github.com/logicalclocks/hopsfs-native-object-store/tree/dev"
repository = "https://github.com/logicalclocks/hopsfs-native-object-store/tree/dev"
keywords = ["hadoop", "hopsfs", "object_store"]
description = "object_store implementation for HopsFS client"
readme = "README.md"
license = "Apache-2.0"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
flate2 = "1.0"
tar = "0.4"
log = "0.4"
env_logger = "0.11"

[dependencies]
async-trait = "0.1"
bytes = "1"
chrono = "0.4"
futures = "0.3"
object_store = "0.12.5"
thiserror = "2"
tokio = { version = "1", features = ["rt", "net", "io-util", "macros", "sync", "time"] }
libc = "0.2"
async-stream = "0.3.6"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
env_logger = "0.11"
serial_test = "3"

[features]
default = []
integration-test = []
skip-download = []
